--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     image: directus/directus:10.8.2
     ports:
       - 8055:8055
-    volumes:
+     volumes:
+      - ./database:/directus/database
       - ./uploads:/directus/uploads
       - ./extensions:/directus/extensions
     depends_on:
